2006-01-17  Aaron Bockover  <aaron@aaronbock.net>

	* configure.ac: Bumped version to 0.10.4

	* NEWS: Updated with the 0.10.4 release notes

	* docs/*: Updated Monodoc API documentation

	* src/Banshee.Base/PlayerEngineCore.cs: Removed some debug 
	Console.WriteLine calls

2006-01-17  Aaron Bockover  <aaron@aaronbock.net>

	* src/PlayerInterface.cs: Uncommented and fixed adding to playlists
	through song context menu to work with the new PlaylistSource

	* src/PlaylistView.cs: Removed unused code that has been commented out
	for months

	* src/Banshee.Base/Sources/PlaylistSource.cs: Added two static properties
	to keep track of and access a collection of PlaylistSource instances

	* docs/Makefile.am: Minor cleanup/fix

2006-01-16  James Willcox  <snorp@snorp.net>

	* src/Banshee.Plugins/Daap/DaapConfigPage.cs: only change the service
	name on focus out, instead of on each individual change.
	* src/Banshee.Plugins/Daap/DaapCore.cs: don't show the service that
	banshee itself exposes, and do a lame job at attempting to handle
	service name collisions.

2006-01-16  James Willcox  <james@ximian.com>

	* src/Banshee.Base/SourceManager.cs: proxy add/remove events to
	the main thread.
	* src/Banshee.Plugins/Daap/DaapCore.cs: hash on the service name
	instead of the whole service object.
	* src/Banshee.Plugins/Daap/daap-sharp/*: synced

2006-01-16  Aaron Bockover  <aaron@aaronbock.net>

	* data/Makefile.am: Install D-Bus service file in 
	$(datadir)/dbus-1/services (BGO #327046)

	* src/Banshee.Plugins/Audioscrobbler/Engine.cs (TransmitQueue): Guard 
	against a potential nullref (BGO #326863)

2006-01-16  Aaron Bockover  <aaron@aaronbock.net>

	* src/PlayerInterface.cs: Add the global actions accelerator group to
	the main window (BGO #326923)
	
	* src/Banshee.Base/Plugins/PluginDialog.cs: Wrapped missing string for
	translation (Øivind Hoel)

2006-01-16  Stephane Raimbault  <stephane.raimbault@free.fr>

	reviewed by: Aaron Bockover  <aaron@aaronbock.net>
